Fixed Partner section list spacing

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -379,7 +379,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 5rem;
   flex-wrap: wrap;
 }
